--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/react-dom": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "prettier": "3.0.3",
     "prettier-eslint": "^15.0.1",
     "typescript": "latest"
