--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "prettier": "3.0.3",
     "prettier-eslint": "^15.0.1",
     "typescript": "latest"
